repaire service machine

--- a/sftp-config.json
+++ b/sftp-config.json
@@ -16,10 +16,10 @@
     
     "host": "pv.huimengtongbao.cn",
     "user": "root",
-    "password": "souIDC@1230",
+    "password": "souidc@0205",
     "port": "22",
     
-    "remote_path": "/root/selling_shop/",
+    "remote_path": "/huimeng/huimengtongbao/selling_shop/",
     "ignore_regexes": [
         "\\.sublime-(project|workspace)", "sftp-config(-alt\\d?)?\\.json",
         "sftp-settings\\.json", "/venv/", "\\.svn/", "\\.hg/", "\\.git/",
